--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,12 @@
 
     <style name="Hedvig.Theme" parent="Hedvig.Theme.V21" />
 
+    <style name="Hedvig.Theme.KeyGear">
+        <item name="android:navigationBarColor">@color/translucent_background</item>
+    </style>
+
+    <style name="Hedvig.Theme.KeyGear.ItemDetail" />
+
     <style name="Hedvig.Theme.Marketing">
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
