added warining color to noCoverage text

--- a/app/src/main/res/layout/activity_key_gear_valuation.xml
+++ b/app/src/main/res/layout/activity_key_gear_valuation.xml
@@ -68,6 +68,7 @@
         android:layout_marginEnd="@dimen/base_margin_quadruple"
         android:text="@string/KEY_GEAR_NOT_COVERED"
         android:textAlignment="center"
+        android:textColor="@color/warning"
         android:visibility="gone"
         tools:visibility="visible" />
 
