--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,4 +40,5 @@
     <color name="dark_mode_elevation_1">#24272e</color>
     <color name="dark_mode_semi_transparent">#e624272e</color>
     <color name="translucent_tool_bar">#730A0D14</color>
+    <color name="warning">#E84646</color>
 </resources>
