--- a/app/src/debug/res/layout/activity_development.xml
+++ b/app/src/debug/res/layout/activity_development.xml
@@ -37,24 +37,6 @@
             android:prompt="@string/mock_personas_prompt" />
 
         <Button
-            android:id="@+id/openValuation"
-            style="@style/HedvigButton.Purple"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/base_margin_double"
-            android:text="Open Valuation" />
-
-        <Button
-            android:id="@+id/openWhatsNew"
-            style="@style/HedvigButton.Purple"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/base_margin_double"
-            android:text="Open What's new screen" />
-
-        <Button
             android:id="@+id/openNativeChat"
             style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
@@ -73,15 +55,6 @@
             android:text="Open native offer screen" />
 
         <Button
-            android:id="@+id/openAlert"
-            style="@style/HedvigButton.Purple"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/base_margin_double"
-            android:text="Open an alert" />
-
-        <Button
             android:id="@+id/openLoggedInWithWelcome"
             style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
@@ -98,6 +71,15 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
             android:text="Open an logged in without Welcome Screen" />
+
+        <Button
+            android:id="@+id/openWebOnboarding"
+            style="@style/HedvigButton.Purple"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:text="Open in-app web onboarding" />
 
         <Button
             android:id="@+id/openReferralReceiver"
@@ -125,6 +107,15 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
             android:text="Open Post-sign Direct Debit screen" />
+
+        <Button
+            android:id="@+id/openAlert"
+            style="@style/HedvigButton.Purple"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:text="Open an alert" />
 
         <Button
             android:id="@+id/openVectorDrawableGallery"
