Fix item detail discoloration

--- a/app/src/main/res/values-v29/styles.xml
+++ b/app/src/main/res/values-v29/styles.xml
@@ -16,5 +16,6 @@
 
     <style name="Hedvig.Theme.KeyGear.ItemDetail">
         <item name="android:windowLightStatusBar">false</item>
+        <item name="colorControlNormal">@color/white</item>
     </style>
 </resources>
