--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -19,4 +19,9 @@
         <item name="android:windowLightStatusBar">false</item>
     </style>
 
+    <style name="Hedvig.Theme.KeyGear.ItemDetail">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
+
 </resources>
