--- a/app/src/main/res/layout/fragment_key_gear.xml
+++ b/app/src/main/res/layout/fragment_key_gear.xml
@@ -69,6 +69,7 @@
             android:layout_marginStart="@dimen/base_margin"
             android:layout_marginTop="@dimen/base_margin_quintuple"
             android:layout_marginEnd="@dimen/base_margin"
+            android:nestedScrollingEnabled="false"
             android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
