--- a/app/src/main/res/layout/language_item_new.xml
+++ b/app/src/main/res/layout/language_item_new.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
+    android:background="@color/background_elevation_1"
     android:paddingStart="@dimen/base_margin_triple"
     android:paddingTop="@dimen/market_item_padding"
     android:paddingEnd="@dimen/base_margin_triple"
@@ -12,12 +13,13 @@
     <TextView
         android:id="@+id/language"
         style="@style/Body.Regular"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         tools:text="Sverige" />
 
     <RadioButton
+        android:clickable="false"
         android:id="@+id/radioButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
