--- a/app/src/main/res/layout/market_item.xml
+++ b/app/src/main/res/layout/market_item.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/background_elevation_1"
     android:gravity="center_vertical"
     android:paddingStart="@dimen/base_margin_triple"
     android:paddingTop="@dimen/market_item_padding"
@@ -19,12 +20,13 @@
     <TextView
         android:id="@+id/country"
         style="@style/Body.Regular"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         tools:text="Sverige" />
 
     <RadioButton
+        android:clickable="false"
         android:id="@+id/radioButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
