--- a/app/src/main/res/layout/activity_marketing.xml
+++ b/app/src/main/res/layout/activity_marketing.xml
@@ -106,6 +106,7 @@
         android:textColor="@color/white"
         android:textSize="14sp"
         android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
