--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -21,7 +21,7 @@
         <ListPreference
             app:entries="@array/market_settings"
             app:entryValues="@array/market_settings_values"
-            app:key="MARKET_SHARED_PREF"
+            app:key="market"
             app:title="Market"
             app:useSimpleSummaryProvider="true" />
 
