--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,251 +5,34 @@
     android:id="@+id/dashboardNestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".feature.dashboard.ui.DashboardFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/bottom_navigation_height">
+        android:layout_marginBottom="@dimen/bottom_navigation_height"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/base_margin_double">
 
         <include
             layout="@layout/loading_spinner"
             tools:visibility="gone" />
 
-        <LinearLayout
-            android:id="@+id/infoBox"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/contracts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/base_margin_triple"
-            android:layout_marginTop="@dimen/base_margin_double"
-            android:layout_marginEnd="@dimen/base_margin_triple"
-            android:background="@drawable/rounded_corners_background_light_gray"
-            android:backgroundTint="@color/violet_100"
-            android:orientation="vertical"
-            android:padding="@dimen/base_margin_double"
-            android:visibility="gone"
+            android:layout_marginStart="@dimen/base_margin_double"
+            android:layout_marginEnd="@dimen/base_margin_double"
+            android:nestedScrollingEnabled="false"
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="visible">
-
-            <TextView
-                android:id="@+id/infoBoxTitle"
-                style="@style/Headline.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textColor="@color/off_black_dark"
-                tools:text="@string/DASHBOARD_SETUP_DIRECT_DEBIT_TITLE" />
-
-            <TextView
-                android:id="@+id/infoBoxText"
-                style="@style/Body.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/base_margin"
-                android:fontFamily="@font/circular_book"
-                android:gravity="center"
-                android:textColor="@color/off_black"
-                tools:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_DESCRIPTION" />
-
-            <Button
-                android:id="@+id/infoBoxButton"
-                style="@style/HedvigButton.Outlined"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/base_margin_double"
-                android:textColor="@color/link_purple"
-                tools:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_BUTTON_LABEL" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/insuranceActive"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/base_margin_triple"
-            android:layout_marginTop="@dimen/base_margin_double"
-            android:gravity="center_vertical"
-            android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/infoBox"
-            tools:ignore="UseCompoundDrawables"
-            tools:visibility="visible">
-
-            <TextView
-                style="@style/Headline.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/DASHBOARD_INSURANCE_ACTIVE" />
-
-            <ImageView
-                android:layout_width="@dimen/checkmark_size"
-                android:layout_height="@dimen/checkmark_size"
-                android:layout_marginStart="@dimen/base_margin_half"
-                android:contentDescription="@null"
-                app:srcCompat="@drawable/ic_filled_checkmark" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/insurancePending"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/base_margin_triple"
-            android:layout_marginTop="@dimen/base_margin_double"
-            android:layout_marginEnd="@dimen/base_margin_triple"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="@dimen/base_margin_double"
-            android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/insuranceActive"
-            tools:visibility="visible">
-
-            <TextView
-                style="@style/Body.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_PENDING_TITLE" />
-
-            <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/insurancePendingLoadingAnimation"
-                android:layout_width="@dimen/insurance_pending_loading_animation_width"
-                android:layout_height="@dimen/insurance_pending_loading_animation_height"
-                android:layout_marginTop="@dimen/base_margin_double"
-                android:scaleType="centerInside"
-                android:visibility="gone"
-                app:lottie_loop="true"
-                app:lottie_rawRes="@raw/banner_loading_icons"
-                tools:visibility="visible" />
-
-            <LinearLayout
-                android:id="@+id/insurancePendingCountDownContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/base_margin_double"
-                android:gravity="center_horizontal|top"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/insurancePendingCountdownMonths"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/base_margin_half"
-                    android:fontFamily="@font/soray_extrabold"
-                    android:includeFontPadding="false"
-                    android:textColor="@color/pink"
-                    android:textSize="@dimen/insurance_pending_countdown_text"
-                    tools:text="8" />
-
-                <TextView
-                    android:id="@+id/insurancePendingCountdownMonthsLabel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/base_margin"
-                    android:fontFamily="@font/soray_extrabold"
-                    android:includeFontPadding="false"
-                    android:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_PENDING_COUNTDOWN_MONTH"
-                    android:textColor="@color/text_emphasized"
-                    android:textSize="@dimen/text_small" />
-
-                <TextView
-                    android:id="@+id/insurancePendingCountdownDays"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/base_margin_half"
-                    android:fontFamily="@font/soray_extrabold"
-                    android:includeFontPadding="false"
-                    android:textColor="@color/text_emphasized"
-                    android:textSize="@dimen/insurance_pending_countdown_text"
-                    tools:text="23" />
-
-                <TextView
-                    android:id="@+id/insurancePendingCountdownDaysLabel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/base_margin"
-                    android:fontFamily="@font/soray_extrabold"
-                    android:includeFontPadding="false"
-                    android:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_PENDING_COUNTDOWN_DAYS"
-                    android:textColor="@color/text_emphasized"
-                    android:textSize="@dimen/text_small" />
-
-                <TextView
-                    android:id="@+id/insurancePendingCountdownHours"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/base_margin_half"
-                    android:fontFamily="@font/soray_extrabold"
-                    android:includeFontPadding="false"
-                    android:textColor="@color/link_purple"
-                    android:textSize="@dimen/insurance_pending_countdown_text"
-                    tools:text="23" />
-
-                <TextView
-                    android:id="@+id/insurancePendingCountdownHoursLabel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/base_margin"
-                    android:fontFamily="@font/soray_extrabold"
-                    android:includeFontPadding="false"
-                    android:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_PENDING_COUNTDOWN_HOURS"
-                    android:textColor="@color/text_emphasized"
-                    android:textSize="@dimen/text_small" />
-
-                <TextView
-                    android:id="@+id/insurancePendingCountdownMinutes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/base_margin_half"
-                    android:fontFamily="@font/soray_extrabold"
-                    android:includeFontPadding="false"
-                    android:textColor="@color/green"
-                    android:textSize="@dimen/insurance_pending_countdown_text"
-                    tools:text="23" />
-
-                <TextView
-                    android:id="@+id/insurancePendingCountdownMinutesLabel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/base_margin"
-                    android:fontFamily="@font/soray_extrabold"
-                    android:includeFontPadding="false"
-                    android:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_PENDING_COUNTDOWN_MINUTES"
-                    android:textColor="@color/text_emphasized"
-                    android:textSize="@dimen/text_small" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/insurancePendingExplanation"
-                style="@style/Body.Small"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingTop="@dimen/base_margin"
-                android:paddingBottom="@dimen/base_margin"
-                tools:text="Du är " />
-
-            <TextView
-                android:id="@+id/insurancePendingMoreInfo"
-                style="@style/SmallButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/base_margin"
-                android:gravity="center"
-                android:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_PENDING_BUTTON_LABEL" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/perilCategoryContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/base_margin_double"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/base_margin_double"
-            app:layout_constraintTop_toBottomOf="@id/insurancePending" />
+            tools:itemCount="1"
+            tools:listitem="@layout/dashboard_contract_row" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
