--- a/app/src/main/res/layout/offer_peril_section.xml
+++ b/app/src/main/res/layout/offer_peril_section.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -34,12 +35,16 @@
         android:layout_marginEnd="@dimen/base_margin_double"
         tools:text="Vi vet hur mycket ett hem betyder. Därför ger vi det ett riktigt bra skydd, så att du kan känna dig trygg i alla lägen." />
 
-    <LinearLayout
-        android:id="@+id/perilsContainer"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/perils"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal" />
+        android:layout_marginTop="@dimen/base_margin_double"
+        android:nestedScrollingEnabled="false"
+        android:orientation="horizontal"
+        android:overScrollMode="never"
+        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
+        tools:itemCount="5"
+        tools:listitem="@layout/peril" />
 
 </LinearLayout>
