--- a/app/src/main/res/layout/peril.xml
+++ b/app/src/main/res/layout/peril.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:orientation="vertical"
-    tools:parentTag="android.widget.LinearLayout">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/base_margin_half"
+    android:orientation="vertical"
+    tools:ignore="UseCompoundDrawables">
 
     <ImageView
         android:id="@+id/image"
@@ -18,7 +21,7 @@
         android:id="@+id/text"
         style="@style/Body.XSmall"
         android:layout_width="@dimen/peril_width"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/base_margin"
         android:layout_weight="1"
         android:gravity="center_horizontal"
@@ -27,4 +30,4 @@
         app:autoSizeTextType="uniform"
         tools:text="Juridisk\ntvist" />
 
-</merge>
+</LinearLayout>
