--- a/app/src/main/res/layout/peril_category.xml
+++ b/app/src/main/res/layout/peril_category.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<com.hedvig.app.ui.view.HedvigCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/base_margin">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/base_margin_double"
-        tools:layout_height="120dp">
+        android:padding="@dimen/base_margin_double">
 
         <ImageView
             android:id="@+id/catIcon"
@@ -20,16 +22,17 @@
             tools:src="@drawable/ic_profile" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/textContainer"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/base_margin_double"
+            android:layout_marginTop="@dimen/base_margin_double"
             android:layout_marginEnd="@dimen/base_margin"
+            android:layout_marginBottom="@dimen/base_margin_double"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@id/perilsContainer"
             app:layout_constraintEnd_toStartOf="@id/expandCollapse"
-            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/catIcon"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -64,15 +67,21 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_expand" />
 
-        <FrameLayout
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/perilsContainer"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:visibility="invisible"
+            android:nestedScrollingEnabled="false"
+            android:orientation="horizontal"
+            android:overScrollMode="never"
+            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textContainer"
+            tools:itemCount="5"
+            tools:listitem="@layout/peril" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</merge>
+</com.hedvig.app.ui.view.HedvigCardView>
