--- a/app/src/main/res/layout/activity_market_picker.xml
+++ b/app/src/main/res/layout/activity_market_picker.xml
@@ -53,7 +53,7 @@
                 android:text="@string/select_country" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/countryList"
+                android:id="@+id/marketList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/base_margin_triple"
