--- a/app/src/main/res/layout/dashboard_contract_row.xml
+++ b/app/src/main/res/layout/dashboard_contract_row.xml
@@ -3,7 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <TextView
+        style="@style/Headline.Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_double"
+        tools:text="Hemförsäkring" />
+
+    <TextView
+        style="@style/Body.Regular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin"
+        android:drawablePadding="@dimen/base_margin"
+        tools:drawableStart="@drawable/ic_filled_checkmark_small"
+        tools:text="Aktiv" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/perilCategories"
