--- a/app/src/main/res/layout/peril.xml
+++ b/app/src/main/res/layout/peril.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/base_margin_half"
+    android:layout_marginStart="@dimen/base_margin"
+    android:layout_marginTop="@dimen/base_margin_double"
+    android:layout_marginEnd="@dimen/base_margin"
+    android:layout_marginBottom="@dimen/base_margin_double"
     android:orientation="vertical"
     tools:ignore="UseCompoundDrawables">
 
