--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="@string/SETTINGS_DISPLAY_TITLE">
 
@@ -19,9 +18,12 @@
             app:title="@string/SETTINGS_LANGUAGE_TITLE"
             app:useSimpleSummaryProvider="true" />
 
-        <Preference
-            android:key="market"
-            app:title="Change Market"/>
+        <ListPreference
+            app:entries="@array/market_settings"
+            app:entryValues="@array/market_settings_values"
+            app:key="market"
+            app:title="Market"
+            app:useSimpleSummaryProvider="true" />
 
         <Preference
             app:key="notifications"
