--- a/app/src/main/res/layout/dashboard_contract_row.xml
+++ b/app/src/main/res/layout/dashboard_contract_row.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/contractName"
         style="@style/Headline.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,6 +16,7 @@
         tools:text="Hemförsäkring" />
 
     <TextView
+        android:id="@+id/contractStatus"
         style="@style/Body.Regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,14 +27,170 @@
         tools:drawableStart="@drawable/ic_filled_checkmark_small"
         tools:text="Aktiv" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/perilCategories"
+    <com.hedvig.app.ui.view.HedvigCardView
+        android:id="@+id/contractInformationCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:nestedScrollingEnabled="false"
-        android:overScrollMode="never"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="3"
-        tools:listitem="@layout/peril_category" />
+        android:layout_marginTop="@dimen/base_margin_double"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/contractInformationIcon"
+                android:layout_width="@dimen/peril_category_icon_size"
+                android:layout_height="@dimen/peril_category_icon_size"
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:layout_marginTop="@dimen/base_margin_triple"
+                android:layout_marginBottom="@dimen/base_margin_triple"
+                android:contentDescription="@null"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/ic_two_homes"
+                tools:tint="@color/black" />
+
+            <TextView
+                android:id="@+id/contractInformationTitle"
+                style="@style/Headline.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:layout_marginTop="@dimen/base_margin_triple"
+                app:layout_constraintBottom_toTopOf="@id/contractInformationDescription"
+                app:layout_constraintStart_toEndOf="@id/contractInformationIcon"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="Min informasjon" />
+
+            <TextView
+                android:id="@+id/contractInformationDescription"
+                style="@style/Body.Small"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/base_margin_triple"
+                android:ellipsize="end"
+                android:singleLine="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/contractInformationInfoIcon"
+                app:layout_constraintStart_toStartOf="@id/contractInformationTitle"
+                app:layout_constraintTop_toBottomOf="@id/contractInformationTitle"
+                tools:text="Karl Johans gate 23 ∙ 2 medforsikrade" />
+
+            <ImageView
+                android:id="@+id/contractInformationInfoIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:layout_marginEnd="@dimen/base_margin_double"
+                android:contentDescription="@null"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_info_purple" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.hedvig.app.ui.view.HedvigCardView>
+
+    <com.hedvig.app.ui.view.HedvigCardView
+        android:id="@+id/perilCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/base_margin">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/catIcon"
+                    android:layout_width="@dimen/peril_category_icon_size"
+                    android:layout_height="@dimen/peril_category_icon_size"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/base_margin_triple"
+                    android:contentDescription="@null"
+                    tools:src="@drawable/ic_family" />
+
+                <LinearLayout
+                    android:id="@+id/textContainer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/base_margin_double"
+                    android:layout_marginTop="@dimen/base_margin_triple"
+                    android:layout_marginEnd="@dimen/base_margin"
+                    android:layout_marginBottom="@dimen/base_margin_triple"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/categoryTitle"
+                        style="@style/Headline.Medium"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:text="Mitt skydd"
+                        app:autoSizeMaxTextSize="@dimen/text_medium"
+                        app:autoSizeMinTextSize="@dimen/text_small"
+                        app:autoSizeStepGranularity="@dimen/sphere_text_step_granularity"
+                        app:autoSizeTextType="uniform" />
+
+                    <TextView
+                        android:id="@+id/categorySubtitle"
+                        style="@style/Body.Small"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tryck för att läsa" />
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:id="@+id/expandCollapse"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/base_margin_triple"
+                    android:contentDescription="@null"
+                    app:srcCompat="@drawable/ic_expand" />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/perilsContainer"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:nestedScrollingEnabled="false"
+                android:orientation="horizontal"
+                android:overScrollMode="never"
+                android:paddingStart="@dimen/base_margin"
+                android:paddingEnd="@dimen/base_margin"
+                android:paddingBottom="@dimen/base_margin"
+                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textContainer"
+                tools:itemCount="5"
+                tools:layout_height="wrap_content"
+                tools:listitem="@layout/peril" />
+
+        </LinearLayout>
+
+    </com.hedvig.app.ui.view.HedvigCardView>
 
 </LinearLayout>
